--- a/Word-Guess-Game.html
+++ b/Word-Guess-Game.html
@@ -24,19 +24,9 @@
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-  <script type="text/javascript">
-  $(document).ready(function()) {
+  <script type="text/javascript" src="C:\Users\annam\Homework\Word-Guess-Game\game.js">
 
-  
 
-// 1. Pick a random word.
-// 2. Take the player’s guess.
-// 3. Quit the game if the player wants to.
-// 4. Check that the player’s guess is a valid letter.
-// 5. Keep track of letters the player has guessed.
-// 6. Show the player their progress.
-// 7. Finish when the player has guessed the word.
-  
 
 // Pick a random word
 // While the word has not been guessed {
