--- a/Word-Guess-Game.html
+++ b/Word-Guess-Game.html
@@ -24,7 +24,7 @@
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-  <script type="text/javascript" src="C:\Users\annam\Homework\Word-Guess-Game\game.js">
+  <script type="text/javascript" src="./game.js">
 
 
 
